# Proyecto_Grupo22

./: .pre-commit-config.yaml  BD_G22.csv  BD_G22_P.csv  BD_G22_SE.csv  Dockerfile  Entrega 1 DSA.ipynb  MANIFEST.in  Model_Experiments.ipynb  Model_Experiments.py  ModeloAPI_Lasso.pkl  Preprocesamiento v2.ipynb  Preprocesamiento v2.py  Preprocesamiento.ipynb  Preprocesamiento.py  README.md  Random_Forest_Model_Experiments.ipynb  api.py  app.py  classes.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
.ipynb_checkpoints/: Entrega 1 DSA-checkpoint.ipynb  Model_Experiments-checkpoint.ipynb  Preprocesamiento esteban-checkpoint.ipynb  Preprocesamiento v2-checkpoint.ipynb  Preprocesamiento-checkpoint.ipynb  Random_Forest_Model_Experiments-checkpoint.ipynb  pruebas-checkpoint.ipynb
.streamlit/: config.toml
apiteam22dsa/: ModeloAPI_OLS.pkl  Spacefile  api.py  classes.py  requirements.txt
data/: .gitignore  BD_G22.xlsx.dvc  BD_G22_P.xlsx  BD_G22_SE.xlsx  Base perfilación de competencias_310823.xlsx
mlruns/0/: meta.yaml
mlruns/472698015293778482/: meta.yaml
mlruns/472698015293778482/6ceead1906b14fffa8e10f8430e750b3/: meta.yaml
mlruns/472698015293778482/b44560d21fd942f1be91ee8a8953139f/: meta.yaml
mlruns/472698015293778482/c11daa15bbb24e1f8492db8ebcce467b/: meta.yaml
mlruns/472698015293778482/ffefb7be849f4680a082c8dc3c686268/: meta.yaml
mlruns/779780199826791944/: meta.yaml
mlruns/877479997803782491/: meta.yaml
tests/: test_dashboard.py  test_general.py
(+18 files in other folders)
