[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = "--cov-report html --cov-report term-missing  --cov=."
testpaths = [
    "tests"]

filterwarnings = [
     'ignore::DeprecationWarning'

]


[tool.mypy]

check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = false
no_implicit_optional = false
show_error_codes = true
strict_equality = false
warn_redundant_casts = false
warn_return_any = false
warn_unreachable =  false
warn_unused_configs = true
no_implicit_reexport = false
ignore_errors=true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

